--- a/views/Student/slogin.ejs
+++ b/views/Student/slogin.ejs
@@ -24,13 +24,14 @@
 
 
     <div class="login-box">
+        <a href="/home" class="btn btn-primary btn-sm"><i class="fa-solid fa-house"></i></a>
 
         <p class="display-6 fs-3 text-center text-muted my-4">Student Login!</p>
 
         <form action="/slogin" method="post">
 
             <input type="email" id="email" name="email" placeholder="Email">
-            <input type="text" id="password" name="password" placeholder="Password">
+            <input type="password" id="password" name="password" placeholder="Password">
 
             <input class="cbtn" type="submit" value="Login">
 
