--- a/views/Student/studentpost.ejs
+++ b/views/Student/studentpost.ejs
@@ -81,6 +81,7 @@
        
 
             <div class="create-post posted">
+                <a href="/sdash" class="btn btn-danger btn-sm"><i class="fa-solid fa-house"></i></a>
 
                 <% tdata.forEach(function(val){ %>
 
