--- a/views/Teacher/tlogin.ejs
+++ b/views/Teacher/tlogin.ejs
@@ -22,15 +22,17 @@
         <p>NUB DIGITAL CLASSROOM</p>
     </div>
 
+    
 
     <div class="login-box">
+        <a href="/home" class="btn btn-primary btn-sm"><i class="fa-solid fa-house"></i></a>
 
         <p class="display-6 fs-3 text-center text-muted my-4">Teacher Login!</p>
 
         <form action="/tlogin" method="POST">
 
         <input type="email" id="email" name="email" placeholder="Email">
-        <input type="text" id="password" name="password" placeholder="Password">
+        <input type="password" id="password" name="password" placeholder="Password">
 
         <input class="cbtn" type="submit" value="Login">
 
