--- a/views/Student/studentpost.ejs
+++ b/views/Student/studentpost.ejs
@@ -24,6 +24,7 @@
 
 
     <div class="posts mt-5">
+        <a href="/sdash" class="btn btn-primary btn-sm mb-3"><i class="fa-solid fa-house"></i></a>
 
         <div class="room_info_box">
             <div class="room_header">
@@ -81,7 +82,7 @@
        
 
             <div class="create-post posted">
-                <a href="/sdash" class="btn btn-danger btn-sm"><i class="fa-solid fa-house"></i></a>
+
 
                 <% tdata.forEach(function(val){ %>
 
