--- a/views/Teacher/studentlist.ejs
+++ b/views/Teacher/studentlist.ejs
@@ -11,99 +11,118 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/admindashboard.css"> 
-    <link rel="stylesheet" href="/css/teachers.css"> 
+    <link rel="stylesheet" href="/css/admindashboard.css">
+    <link rel="stylesheet" href="/css/teachers.css">
 </head>
 
 <body>
 
-    <div class="main-body d-flex">
+    <div class="main-body">
+
+        <a href="/tdash" class="btn btn-primary btn-sm m-3"><i class="fa-solid fa-house"></i></a>
+
+        <p class="p-3 text-muted display-6 fs-3 text-center">Students List</p>
 
 
-        <div class="right-contents">
-            <p class="p-3 text-muted display-6 fs-4 text-center">Students Infomation</p>
-
-            <div class="row gy-5">
-
-                <% let x=1 %>
-
-                <% data.forEach(function(val){ %>
-
-                <div class="col-md-4">
-                    <div class="tcard text-center p-4">
-                        <div class="img text-center">
-                            <% if(val.profile){ %>
-                                <img src="/uploads/<%= val.profile %>" alt="avatar" height="90">
-                            <% }else{ %>
-                                <img src="/img/avatar.png" alt="avatar" height="90">
-                            <% } %>
-                        </div>
-    
-                        <p class="fw-bold mt-2 fs-5"><%= val.name %></p>
-                        <p class="dept">Department of <%= val.department %></p>
-                         <!-- Button trigger modal -->
-                         <a href="#" type="button" class="btn cbtn-card btn-sm mt-3" data-bs-toggle="modal"
-                         data-bs-target="#exampleModal<%= x %>">
-                         view details
-                     </a>
-
-                     <!-- Modal -->
-                     <div class="modal fade" id="exampleModal<%= x %>" tabindex="-1" aria-labelledby="exampleModalLabel"
-                         aria-hidden="true">
-                         <div class="modal-dialog modal-dialog-centered">
-                             <div class="modal-content">
-                                 <div class="modal-header">
-                                     <h5 class="modal-title" id="exampleModalLabel">Student Informtaion</h5>
-                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                         aria-label="Close"></button>
-                                 </div>
-                                 <div class="modal-body">
-
-                                     <div class="img text-center">
-                                        <% if(val.profile){ %>
-                                            <img src="/uploads/<%= val.profile %>" alt="avatar" height="90">
-                                        <% }else{ %>
-                                            <img src="/img/avatar.png" alt="avatar" height="90">
-                                        <% } %>
-                                     </div>
-         
-                                     <p class="fw-bold mt-2 fs-5"><%= val.name %></p>
-                                     
-                                     <div class="add-info">
-                                         <p>Email: <%= val.email %> </p>
-                                         <p>Password: <%= val.password %> </p>
-                                         <p>Department: <%= val.department %></p>
-                                         <p>Gender: <%= val.gender %> </p>
-                                         <p>Contact No: <%= val.contact %> </p>
-                                     
-                                     </div>
-                                     
-                                 </div>
-                                 <div class="modal-footer">
-                                     <button type="button" class="btn btn-success btn-sm">Edtit</button>
-                                     <button type="button" class="btn btn-danger btn-sm">Delete</button>
-                                 </div>
-                             </div>
-                             <% x++; %>
-                         </div>
-                     </div>
-
-    
-                    </div>
-                </div>
-
-                <% }) %>
-
-       
-                
-            </div>
+        <div class="w-75 mx-auto">
+        <table class="table text-center">
+            <thead>
+                <tr>
+                    <th scope="col">Student ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Department</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
 
 
+                <% if(!(Object.keys(data).length === 0)){ %>
+
+                <% let x=1; %>
+
+                    <% data.forEach(function(val){ %>
+
+                        <tr>
+                            <th>
+                                <%= val.student_id %>
+                            </th>
+                            <td>
+                                <%= val.name %>
+                            </td>
+                            <td>
+                                <%= val.department %>
+                            </td>
+                            <td>
+                                <a href="#" type="button" class="btn cbtn-card btn-sm mt-3" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal<%= x %>">
+                                    view details
+                                </a>
+                                <div class="modal fade" id="exampleModal<%= x %>" tabindex="-1"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Student Informtaion</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+
+                                                <div class="img text-center">
+                                                    <% if(val.profile){ %>
+                                                        <img src="/uploads/<%= val.profile %>" alt="avatar" height="90">
+                                                        <% }else{ %>
+                                                            <img src="/img/avatar.png" alt="avatar" height="90">
+                                                            <% } %>
+                                                </div>
+
+                                                <p class="fw-bold mt-2 fs-5">
+                                                    <%= val.name %>
+                                                </p>
+
+                                                <div class="add-info">
+                                                    <p>Email: <%= val.email %>
+                                                    </p>
+                                                    <p>Password: <%= val.password %>
+                                                    </p>
+                                                    <p>Department: <%= val.department %>
+                                                    </p>
+                                                    <p>Gender: <%= val.gender %>
+                                                    </p>
+                                                    <p>Contact No: <%= val.contact %>
+                                                    </p>
+
+                                                </div>
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-success btn-sm">Edtit</button>
+                                                <button type="button" class="btn btn-danger btn-sm">Delete</button>
+                                            </div>
+                                        </div>
+                                        <% x++; %>
+                                    </div>
+                                </div>
 
 
-        </div>
+                            </td>
+                        </tr>
 
-       
+
+                        <% }) %>
+
+                    
+
+            </tbody>
+        </table>
+
+    </div>
+
+    <% } %>
+
+
+
 
     </div>
 
